# music-listings

./: .env.example  Procfile  README.md  pyproject.toml
music_detailing/: admin.py  models.py
music_detailing/migrations/: 0002_song_remove_musicdetails_artist_delete_artist_and_more.py  0003_alter_song_country_list_alter_song_summary.py
music_detailing/tests/: mocked_data.py  test_http_call.py  test_utils.py  utils.py
music_detailing/utils/: http_utils.py  utils.py
music_listing/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
music_listing/music_detailing/: apps.py  models.py
music_listing/music_detailing/migrations/: 0001_initial.py
music_listing/music_detailing/tests/: mocked_data.py  open_ai_mock_class.py  test_http_call.py
music_listing/music_detailing/utils/: http_utils.py  utils.py
music_listing/music_listing/: settings.py  urls.py
