[tool.poetry]
name = "music-listings"
version = "0.1.0"
description = ""
authors = ["Oghenemarho Onothoja"]
readme = "README.md"
packages = [{include = "music_listings"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
openai = "^1.34.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
