[tool.poetry]
name = "music-listings"
version = "0.1.0"
description = ""
authors = ["Oghenemarho Onothoja"]
readme = "README.md"
packages = [{include = "music_listing"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
openai = "^1.34.0"
psycopg2 = "^2.9.9"
pytest-mock = "^3.14.0"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
mock = "^5.1.0"
dj-database-url = "^2.2.0"
gunicorn = "^22.0.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "music_listing.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
